# cauterize

./: .gitignore  LICENSE  README.md  pyproject.toml
cauterize/: __init__.py  _ai_client.py  _audit.py  _config.py  _context.py  _escalation.py  _heal.py  _hook.py  _jira.py  _notify.py  _patcher.py  _prompt.py  _provider.py  _registry.py  _safety.py  _startup.py  _validator.py
cauterize/integrations/: _base.py  celery.py  django.py  fastapi.py  github.py  jira.py  slack.py
cauterize/providers/: anthropic.py  openai.py
